# XiaoClaw

./: .gitignore  Cargo.toml  README.md  README_ZH.md
XiaoClaw/: README.md
XiaoClaw/python/: pyproject.toml
XiaoClaw/src/config/: mod.rs
XiaoClaw/src/session/: mod.rs
XiaoClaw/src/tools/: mod.rs
examples/: run.rs
nanobot-rs/: Cargo.toml  README.md
nanobot-rs/python/: pyproject.toml
nanobot-rs/python/nanobot/: __init__.py  provider.py
nanobot-rs/python/nanobot/channel/: __init__.py
nanobot-rs/src/agent/: context.rs  loop_core.rs  mod.rs
nanobot-rs/src/ffi/: python.rs
nanobot-rs/src/memory/: mod.rs  store.rs
nanobot-rs/src/session/: manager.rs
nanobot-rs/src/tools/: registry.rs
python/nanobot/: client.py
src/: lib.rs  main.rs
src/agent/: loop_core.rs  mod.rs
src/providers/: anthropic.rs  mod.rs  openai.rs  openrouter.rs  zhipu.rs
src/tools/: builtin.rs  mod.rs
