[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "xiao-claw"
version = "0.1.0"
description = "Ultra-lightweight AI Agent core in Rust"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["maturin"]

[tool.maturin]
features = ["python"]
